<resources>
    <string name="app_name">NextCash Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_wallet">Add Wallet</string>
    <string name="default_wallet_name">Main</string>
    <string name="initial_block_download_title">Downloading block chain.</string>
    <string name="initial_block_download_message">
        The initial block download is not complete.
        It might take an hour or more.
        It may take a few minutes to find some initial nodes.
        You will not be able to send or confirm transactions until it is complete.
        You can request payments, you just won\'t be able to validate confirms.
    </string>
    <string name="synchronizing">Synchronizing</string>
    <string name="needs_backed_up">Needs Backed Up</string>
    <string name="add_wallet_message">
        An initial wallet has been created for you.
        You can create and/or import more if you would like.
    </string>
    <string name="beta_message">
        This is a Beta release.
        That means there is the potential to lose any Bitcoin Cash you put into the wallet.
        Please only put small amounts in your wallet until Beta testing is complete.
        Please use for small regular transactions and provide feedback with the \"bug\" button.
    </string>
    <string name="chain">Chain</string>
    <string-array name="chain_tickers">
        <item>BCH</item>
        <item>BSV</item>
    </string-array>
    <string-array name="chain_names">
        <item>Bitcoin Cash (BCH)</item>
        <item>Bitcoin SV (BSV)</item>
    </string-array>
    <string-array name="chain_message">
        <item>
            Your wallet is following the Bitcoin Cash (BCH) chain.
            You can change this in settings.
        </item>
        <item>
            Your wallet is following the Bitcoin SV (BSV) chain.
            You can change this in settings.
        </item>
    </string-array>
    <string name="inactive">Inactive</string>
    <string name="loading">Loading</string>
    <string name="loading_wallets">Loading Wallets</string>
    <string name="loading_chain">Loading Block Chain</string>
    <string name="chain_loading">
        Block chain data is loading.
    </string>
    <string name="chain_synchronizing">
        Block chain data is synchronizing.
    </string>
    <string name="transactions_synchronizing">
        Transaction data is synchronizing.
    </string>
    <string name="functions_disabled">
        Some functions will be disabled until it finishes.
    </string>
    <string name="unable_to_find_transaction">Unable to find transaction</string>
    <string name="synchronized_text">Synchronized</string>
    <string name="finding_peers">Finding Nodes</string>
    <string name="connecting_to_peers">Connecting to Nodes</string>
    <string name="requesting_blocks">Looking for blocks</string>
    <string name="requesting_transactions">Requesting transactions</string>
    <string name="watching_for_transactions">Watching for transactions</string>
    <string name="blocks">Blocks</string>
    <string name="title_settings">Settings</string>
    <string name="edit_wallets">Edit Wallets</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_transactions">Transactions</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="title_sync_frequency">Sync Frequency</string>
    <string name="description_sync_frequency">
        How often to synchronize the block chain with peer nodes.
        This involves connecting to peer nodes and downloading block headers and transactions.
        This is just referring to background synchronizing.
        Whenever the application is opened it will attempt to synchronize as well.
    </string>
    <string-array name="sync_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string name="wallet">Wallet</string>
    <string name="title_add_wallet">Add Wallet</string>
    <string name="wallet_settings">Wallet Settings</string>
    <string name="title_wallet_history">Wallet History</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="buy_bitcoin_cash">Buy Bitcoin Cash</string>
    <string name="opening_coinbase_website">Opening Coinbase Website</string>
    <string name="support_nextcash">Support NextCash</string>
    <string name="support_nextcash_description">
        Send Bitcoin Cash to this address to support NextCash development.
    </string>
    <string name="give_feedback">Give Feedback</string>
    <string name="opening_email">Opening Email</string>
    <string name="create_new_key">Create New Wallet</string>
    <string name="recover_wallet">Recover Wallet</string>
    <string name="update_name">Update Name</string>
    <string name="send_value">Send Value</string>
    <string name="gain_loss">Gain/Loss</string>
    <string name="gain_loss_report">Gain/Loss Report</string>
    <string name="gain_loss_mismatch_error">
        There are differing \"exchange/cost types\".
        Without appropriate conversion rates this report can\'t be generated.
    </string>
    <string name="failed_gain_loss">
        The gain/loss report failed to generate because of invalid transactions.
    </string>
    <string name="failed_export_gain_loss">Failed to export gain/loss report.</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="backup_wallet">Backup Wallet</string>
    <string name="remove_wallet">Remove Wallet</string>
    <string name="import_bip0032_key">Import BIP-0032 Key</string>
    <string name="scan_private_key">Scan Private Key</string>
    <string name="scan_receiving_key">Scan Receiving Key</string>
    <string name="scan_change_key">Scan Change Key</string>
    <string name="scan_account_key">Scan Account Key</string>
    <string name="scan_address">Scan Address</string>
    <string name="title_import_bip0032_key">Enter BIP-0032 Key(s)</string>
    <string name="xpub_quoted">\"xpub\"</string>
    <string name="derivation_path">Derivation Path</string>
    <string name="custom_derivation_path">Custom Derivation Path</string>
    <string name="address_gap">Address Gap</string>
    <string name="default_gap">20</string>
    <string name="purpose">Purpose</string>
    <string name="coin">Coin</string>
    <string name="hard">Hard</string>
    <string name="import_text">Import</string>
    <string name="success_key_import">Successfully imported key</string>
    <string name="failed_key_import">Failed to import key</string>
    <string name="failed_key_import_format">Invalid key format</string>
    <string name="failed_key_import_exists">Key already in wallet</string>
    <string name="failed_key_import_method">Invalid derivation method</string>
    <string name="failed_update_name">Failed to update name</string>
    <string name="failed_update_gap">Failed to update address gap</string>
    <string name="success_remove_wallet">Successfully removed wallet</string>
    <string name="failed_remove_wallet">Failed to remove wallet</string>
    <string name="failed_generate_address">Failed to generate address</string>
    <string name="failed_generate_payment_code">Failed to generate payment code</string>
    <string name="failed_generate_qr">Failed to generate QR code</string>
    <string name="failed_generate_key">Failed to generate wallet</string>
    <string name="sent_payment">Sent Payment</string>
    <string name="failed_send_payment">Failed to send payment</string>
    <string name="failed_insufficient_funds">Insufficient Funds</string>
    <string name="derivation_backup_note">Save this derivation path with your seed.</string>
    <string name="address_labels">Address Labels</string>
    <string name="address_labels_instruction">
        Address labels can be accessed after touching the receive button.
        They are used to automatically label incoming transactions for specific addresses.
        For instance, you can give your friend a specific address, and label it with their name.
        Then when they send you money, you will know it came from them.
    </string>
    <string name="enter_address_hint">Enter Address</string>
    <string name="add">Add</string>
    <string name="address_book">Address Book</string>
    <string name="address_book_description">
        When using saved addresses please ensure the recipient still has access to the address.
        If sending a large amount it is best to request a new payment address.
    </string>
    <string name="address_book_instruction">
        The address book is accessed after touching the send button.
        It is used to save addresses to send payments to repeatedly, or just later.
        For instance, if your friend gives you an address, you can save it with their name.
        Then if you want to send them a payment later, and you know they still use the same wallet,
          you can just send a payment to that address.
    </string>
    <string name="add_manual_address_book">Manually Add</string>
    <string name="enter_address_name_hint">Enter Address Name</string>
    <string name="name">Name</string>
    <string name="authorize">Authorize</string>
    <string name="backspace">Back Space</string>
    <string name="wallet_seed">Wallet Seed</string>
    <string name="wallet_seed_description">
        These words are the \"mnemonic seed\" for your wallet.
        You need to write this down and store this in a safe place so you can recover your wallet if
        you lose access to this device or forget your passcode.
        No one else can recover your bitcoins for you.
        Anyone who has access to this seed can spend all of your bitcoins.
    </string>
    <string name="wallet_seed_written">
        Press continue when you have written down your \"mnemonic seed\".
    </string>
    <string name="continue_string">Continue</string>
    <string name="address">Address</string>
    <string name="mnemonic_seed_entropy">Entropy</string>
    <string name="instructions">Instructions</string>
    <string name="app_instructions">
        You need to add at least one wallet to the app in order to send and receive payments.
    </string>
    <string name="app_controls">Application Controls</string>
    <string name="add_wallet_instructions">
        Add a wallet to the NextCash wallet app.
    </string>
    <string name="buy_instructions">
        Buy Bitcoin Cash from CoinBase with a referral from NextCash.
    </string>
    <string name="support_instructions">
        Support NextCash wallet development.
    </string>
    <string name="feedback_instructions">
        Provide feedback to NextCash about this app.
    </string>
    <string name="wallet_controls">Wallet Controls</string>
    <string name="wallet_instructions">
        Touch a wallet to expand or contract it.
    </string>
    <string name="backup_instructions">
        Back up your wallet by writing down the seed words.
        If you don\'t have the seed and your device fails or you lose it, your money is gone.
    </string>
    <string name="send_instructions">
        Send a payment to someone from a wallet.
    </string>
    <string name="receive_instructions">
        Receive a payment from someone to a wallet.
    </string>
    <string name="history_instructions">
        See historical transactions for a wallet.
    </string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>