<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/HeadingText"
        android:text="@string/instructions"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        style="@style/SubHeadingText"
        android:text="@string/app_controls"/>

    <TextView
        style="@style/Answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_instructions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/baseline_add_white_36dp"
            android:background="@drawable/control_button_background"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/add_wallet_instructions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/baseline_attach_money_white_36dp"
            android:background="@drawable/control_button_background"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/buy_instructions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="8dp"
            android:src="@drawable/baseline_favorite_white_36dp"
            android:background="@drawable/control_button_background"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/support_instructions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/baseline_bug_report_white_36dp"
            android:background="@drawable/control_button_background"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/feedback_instructions"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        style="@style/SubHeadingText"
        android:text="@string/wallet_controls"/>

    <TextView
        style="@style/Answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_instructions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="5dp"
            android:src="@drawable/baseline_backup_black_36dp"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/backup_instructions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="5dp"
            android:src="@drawable/ic_send_black_36dp"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/send_instructions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="5dp"
            android:src="@drawable/ic_add_circle_black_36dp"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/receive_instructions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="5dp"
            android:src="@drawable/ic_history_black_36dp"/>
        <TextView
            style="@style/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/history_instructions"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        style="@style/SubHeadingText"
        android:text="@string/address_book"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_book_instruction"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        style="@style/SubHeadingText"
        android:text="@string/address_labels"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_labels_instruction"/>

</LinearLayout>
