<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_seed"
        android:textAlignment="center"
        style="@style/HeadingText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wallet_seed_description"/>

    <LinearLayout
        android:id="@+id/seedEntropyContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mnemonic_seed_entropy"
            style="@style/HeadingText"/>

        <Spinner
            android:id="@+id/seedEntropy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:entries="@array/mnemonic_seed_length_titles"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#aaa">

        <TextView
            android:id="@+id/seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ddd"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubHeadingText"
            android:text="@string/derivation_path"/>

        <Spinner
            android:id="@+id/derivationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/derivation_methods"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/derivation_backup_note"/>

    <TextView
        android:id="@+id/derivationPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/SubHeadingText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wallet_seed_written"/>

    <tech.nextcash.nextcashwallet.TextButton
        android:id="@+id/verifySeedSaved"
        style="@style/Button"
        android:text="@string/continue_string"/>

</LinearLayout>
